Fix extra padding

--- a/_sass/project.scss
+++ b/_sass/project.scss
@@ -4,9 +4,6 @@ $phone: 350px;
 
 body {
   background-color: rgb(245, 245, 245);
-  .column {
-    min-height: 100vh;
-  }
 }
 
 div.project-header {
